--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,13 @@ dependencies {
 	testImplementation 'junit:junit:4.12'
 	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
 	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
+
+	implementation files('lib/vorbisspi.jar')
+	implementation files('lib/java-vorbis-support-1.2.1.jar')
+	implementation files('lib/tritonus-share-0.3.7.4.jar')
 }
 
-group = 'com.example'
+group = 'com.skilljingles'
 version = '1.0-SNAPSHOT'
 sourceCompatibility = '1.8'
 
