--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Skill Jingles
+author=Jeffrey Kazmierski
+support=https://github.com/starvec/Skill-Jingles
+description=Enables skill jingles even when the in-game music is muted
+tags=skill,jingle,jingles,music
+plugins=com.skilljingles.SkillJinglesPlugin
